assets/css/screen.css
/* ... */
.is-head-stacked .gh-head-brand {
    grid-row-start: 1;
    grid-column-start: 2;
}

@media (min-width: 992px) {
    .is-head-stacked .gh-head-inner {
        padding: 0;
    }

    .is-head-stacked .gh-head-brand {
        position: relative;
        display: flex;
        align-items: center;
        height: 80px;
    }

    .is-head-stacked .gh-head-menu {
        grid-row-start: 2;
        grid-column: 1 / 4;
        justify-content: center;
        height: 56px;
        margin: 0 48px;
    }

    .is-head-stacked .gh-head-menu::before,
    .is-head-stacked .gh-head-menu::after {
        position: absolute;
        top: 80px;
        left: 0;
        width: 100%;
        height: 1px;
        content: "";
        background-color: var(--color-lightgrey);
    }

    .is-head-stacked.has-cover .gh-head-menu::before,
    .is-head-stacked.has-cover .gh-head-menu::after {
        background-color: rgba(255, 255, 255, 0.2);
    }

    .is-head-stacked .gh-head-menu::after {
        top: 136px;
    }

    .is-head-stacked .gh-head-actions {
        grid-row-start: 1;
        grid-column: 1 / 4;
        justify-content: space-between;
    }
}

/* Brand
/* ---------------------------------------------------------- */

.gh-head-brand {
    display: flex;
    align-items: center;
    height: 40px;
    word-break: break-all;
}

.gh-head-logo {
    display: block;
    font-family: var(--gh-font-heading, var(--font-sans));
    font-weight: 800;
    font-size: 2.6rem;
    letter-spacing: -0.02em;
    color: inherit;
    white-space: nowrap;
}

.gh-head-logo.no-image {
    margin-top: -5px;
}

.has-cover .gh-head-logo {
    color: #fff;
}

.gh-head-logo img {
    max-height: 40px;
}


/* Primary Navigation
/* ---------------------------------------------------------- */

.gh-head-menu {
    display: flex;
    align-items: center;
    margin-top: 1px;
    font-weight: 500;
}

.gh-head-menu .nav {
    display: inline-flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 32px;
    list-style: none;
    margin: 0;
    padding: 0;
}

.gh-head-menu .nav li {
    margin: 0;
    padding: 0;
}

.gh-head-menu .nav a {
    display: inline-block;
    line-height: 1.7;
    color: inherit;
}

.gh-head-menu .nav a:hover {
    opacity: 0.9;
}

.gh-head-menu .nav-more-toggle {
    position: relative;
    width: 30px;
    height: 30px;
    margin: 0 -6px;
    padding: 0;
    font-size: inherit;
    background-color: transparent;
    text-transform: inherit;
}

.gh-head-menu .nav-more-toggle svg {
    width: 24px;
    height: 24px;
}

@media (min-width: 992px) {
    body:not(.is-dropdown-loaded) .gh-head-menu .nav > li {
        opacity: 0;
    }
}


/* Dropdown
/* ---------------------------------------------------------- */

.gh-dropdown {
    position: absolute;
    top: 100%;
    right: -16px;
    z-index: 90;
    width: 200px;
    padding: 12px 0;
    margin-top: 24px;
    opacity: 0;
    visibility: hidden;
    text-align: left;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 7px 20px -5px rgba(0, 0, 0, 0.15);
    transform: translate3d(0, 6px, 0);
    transition: opacity 0.3s, transform 0.2s;
}

.is-head-middle-logo .gh-dropdown {
    right: auto;
    left: -24px;
}

.is-dropdown-mega .gh-dropdown {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: column;
    column-gap: 40px;
    min-width: 320px;
    padding: 20px 32px;
}

.is-dropdown-open .gh-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.gh-head-menu .gh-dropdown li a {
    display: block;
    padding: 6px 20px;
    color: #15171a;
}

.is-dropdown-mega .gh-dropdown li a {
    padding: 8px 0;
}


/* Secondary Navigation
/* ---------------------------------------------------------- */

.gh-social {
    display: flex;
    align-items: center;
    gap: 20px;
}

.gh-social-link {
    line-height: 0;
    color: inherit;
}

.gh-social-link:hover {
    opacity: 0.9;
}

.gh-social-link svg {
    width: 18px;
    height: 18px;
}

.gh-head-actions {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 24px;
    list-style: none;
    text-align: right;
}

.gh-head-members {
    display: flex;
    gap: 20px;
    align-items: center;
}

.gh-head-link {
    font-weight: 500;
    color: inherit;
}

.gh-head-button {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 8px 20px;
    height: 30px;
    font-weight: 600;
    letter-spacing: -0.005em;
    font-size: 1.6rem;
    border-radius: 30px;
    color: #fff;
    background: var(--ghost-accent-color);
}

.has-cover 
{
    color: var(--color-darkgrey);
    background: #fff;
}

@media (max-width: 767px) {
    .gh-head-members {
        flex-direction: column-reverse;
        gap: 16px;
        width: 100%;
    }
}

@media (max-width: 767px) {
    .gh-head-members {
        flex-direction: column-reverse;
        gap: 16px;
        width: 100%;
    }
}

.gh-social form {
    display: inline;
}

.gh-social-facebook svg {
    height: 20px;
    width: 20px;
}

/* Search
/* ---------------------------------------------------------- */

a.gh-head-button {
    display: block;
    padding: 8px 15px;
    color: var(--button-text-color, var(--color-darkgrey));
    font-weight: 500;
    letter-spacing: -0.015em;
    font-size: 1.5rem;
    line-height: 1em;
    background: var(--button-bg-color, #fff);
    border-radius: 30px;
}

.gh-search {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 32px;
    height: 32px;
    padding: 0;
    cursor: pointer;
    background-color: transparent;
    border: 0;
    outline: none;
}

.gh-search:hover {
    opacity: 0.9;
}

.gh-head-brand .gh-search {
    margin-right: 8px;
}

.gh-head-actions .gh-search {
    margin-right: -4px;
}

@media (max-width: 767px) {
    .gh-head-actions .gh-search {
        display: none;
    }
}
/* ... */

